--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,16 +1,231 @@
-body{
+body {
     background-color: #312F2F;
-	width: 100%;
-	height: 100%;
-	font-family: "Segoe UI", sans-serif;
-}
-
-header.page-header-desktop{
-    visibility: visible;
-
-}
-
-header.page-header-mob{
+    width: 100%;
+    height: 100%;
+    font-family: "Segoe UI", sans-serif;
+  }
+  
+  .logo {
+    height: 60px;
+  }
+  
+  header.page-header-desktop {
+    vertical-align: middle;
+    width: 100%;
+    min-height: 120px;
+  }
+  
+  .header-column-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    vertical-align: middle;
+    min-height: 70px;
+  }
+  
+  .header-column-1 div {
+    margin: auto;
+  }
+  
+  .header-navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    vertical-align: middle;
+    min-height: 50px;
+    background-color: #5B5B5B;
+    font-size: 18px;
+    color: whitesmoke;
+  }
+  
+  .header-navbar a {
+    display: flex;
+    align-items: center;
+    color: #EBF2FA;
+    text-align: center;
+    padding: 11px 15px;
+    text-decoration: none;
+    font-size: 18px;
+  }
+  
+  .header-navbar a:hover {
+    background-color: #EBF2FA;
+    color: #004777;
+  }
+  
+  .header-navbar a:active {
+    background-color: white;
+    color: #004777;
+  }
+  
+  .header-logo {
+    height: 60px;
+    float: left;
+  }
+  
+  .header-name {
+    color: #DDD92A;
+    font-size: 18px;
+    margin: auto;
+  }
+  
+  .search {
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    width: 40%;
+    background-color: whitesmoke;
+    border-radius: 20px;
+  }
+  
+  .search-line {
+    font-size: 30px;
+    height: 50px;
+    width: 77%;
+  }
+  
+  .searching {
+    height: 40px;
+    width: 40px;
+  }
+  
+  .icons {
+    height: 40px;
+    width: 40px;
+  }
+  
+  header.page-header-mob {
+    display: none;
     visibility: hidden;
     box-sizing: border-box;
+  }
+  
+  header.page-header-mob div {
+    margin: auto;
+  }
+  
+  #nav-icon {
+    position: relative;
+    top: 25px;
+    left: 50px;
+    z-index: 1;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
+  }
+  
+  #nav-icon a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
+  }
+  
+  #nav-icon a:hover {
+    color: tomato;
+  }
+  
+  #nav-icon input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    -webkit-touch-callout: none;
+  }
+  
+  #nav-icon span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #DDD92A;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+  
+  #nav-icon span:first-child {
+    transform-origin: 0% 0%;
+  }
+  
+  #nav-icon span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+  
+  #nav-icon input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+  
+  #nav-icon input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  
+  #nav-icon input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  
+  #menu {
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+    background: #ededed;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  }
+  
+  #menu li {
+    padding: 10px 0;
+    font-size: 22px;
+  }
+  
+  #nav-icon input:checked ~ ul {
+    transform: none;
+  }
+
+  footer.page-footer{
+	margin-top: 10px;
+	background: linear-gradient(#5b5b5b 50%, #312f2f 0);
+	width: 100%;
+    min-height: 80px;
 }
+  
+  @media only screen and (max-width: 910px) {
+    header.page-header-desktop {
+      clear: both;
+      visibility: hidden;
+      box-sizing: border-box;
+      display: none;
+    }
+  
+    header.page-header-mob {
+      display: flex;
+      flex-direction: row;
+      margin: auto;
+      visibility: visible;
+      box-sizing: content-box;
+      height: 70px;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .header-name {
+      font-size: 0px;
+    }
+  }
+  
+  
