--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,17 +4,17 @@ body {
     height: 100%;
     font-family: "Segoe UI", sans-serif;
   }
-  
+
   .logo {
     height: 60px;
   }
-  
+
   header.page-header-desktop {
     vertical-align: middle;
     width: 100%;
     min-height: 120px;
   }
-  
+
   .header-column-1 {
     display: flex;
     flex-direction: row;
@@ -22,11 +22,11 @@ body {
     vertical-align: middle;
     min-height: 70px;
   }
-  
+
   .header-column-1 div {
     margin: auto;
   }
-  
+
   .header-navbar {
     display: flex;
     flex-direction: row;
@@ -37,7 +37,7 @@ body {
     font-size: 18px;
     color: whitesmoke;
   }
-  
+
   .header-navbar a {
     display: flex;
     align-items: center;
@@ -47,20 +47,20 @@ body {
     text-decoration: none;
     font-size: 18px;
   }
-  
+
   .header-navbar a:hover {
     background-color: #EBF2FA;
   }
-  
+
   .header-navbar a:active {
     background-color: white;
   }
-  
+
   .header-logo {
     height: 60px;
     float: left;
   }
-  
+
   .header-name {
     color: #DDD92A;
     text-decoration: none !important;
@@ -70,42 +70,44 @@ body {
         text-decoration: none !important;
     }
   }
-  
+
   .search {
     display: flex;
     flex-direction: row;
     height: 50px;
     width: 40%;
     background-color: whitesmoke;
+      border: none;
     border-radius: 20px;
   }
-  
+
   .search-line {
     font-size: 30px;
     height: 50px;
     width: 77%;
+      border-width : 0;
   }
-  
+
   .searching {
     height: 40px;
     width: 40px;
   }
-  
+
   .icons {
     height: 40px;
     width: 40px;
   }
-  
+
   header.page-header-mob {
     display: none;
     visibility: hidden;
     box-sizing: border-box;
   }
-  
+
   header.page-header-mob div {
     margin: auto;
   }
-  
+
   #nav-icon {
     position: relative;
     top: 25px;
@@ -116,17 +118,17 @@ body {
      -ms-user-select: none;
          user-select: none;
   }
-  
+
   #nav-icon a {
     text-decoration: none;
     color: #232323;
     transition: color 0.3s ease;
   }
-  
+
   #nav-icon a:hover {
     color: tomato;
   }
-  
+
   #nav-icon input {
     display: block;
     width: 40px;
@@ -139,7 +141,7 @@ body {
     z-index: 2;
     -webkit-touch-callout: none;
   }
-  
+
   #nav-icon span {
     display: block;
     width: 33px;
@@ -152,30 +154,30 @@ body {
     transform-origin: 4px 0px;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
   }
-  
+
   #nav-icon span:first-child {
     transform-origin: 0% 0%;
   }
-  
+
   #nav-icon span:nth-last-child(2) {
     transform-origin: 0% 100%;
   }
-  
+
   #nav-icon input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
     background: #232323;
   }
-  
+
   #nav-icon input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
   }
-  
+
   #nav-icon input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
   }
-  
+
   #menu {
     position: absolute;
     width: 300px;
@@ -189,12 +191,12 @@ body {
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
-  
+
   #menu li {
     padding: 10px 0;
     font-size: 22px;
   }
-  
+
   #nav-icon input:checked ~ ul {
     transform: none;
   }
@@ -205,7 +207,7 @@ body {
 	width: 100%;
     min-height: 80px;
 }
-  
+
   @media only screen and (max-width: 910px) {
     header.page-header-desktop {
       clear: both;
@@ -213,7 +215,7 @@ body {
       box-sizing: border-box;
       display: none;
     }
-  
+
     header.page-header-mob {
       display: flex;
       flex-direction: row;
@@ -223,11 +225,17 @@ body {
       height: 70px;
     }
   }
-  
+
   @media (max-width: 500px) {
     .header-name {
       font-size: 0px;
     }
   }
-  
-  
+
+  #button-search {
+      height: 40px;
+  }
+
+  .non-display {
+      display:none;
+  }
