--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -205,6 +205,64 @@ body {
 	width: 100%;
     min-height: 80px;
 }
+
+.landing_image{
+  height: 500px;
+  margin-top: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.landing_image2{
+  height: 500px;
+  margin-top: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.landing_h{
+  color: black;
+  background: whitesmoke;
+}
+
+.landing2_h{
+  color: whitesmoke;
+  background: red;
+}
+
+.landing3_h{
+  color: black;
+}
+
+.landing4_h{
+  color: whitesmoke;
+}
+
+.buy_button{
+  color: black;
+  background: whitesmoke;
+  border-color: black;
+  width: 200px;
+  height: 50px;
+  border: solid;
+  &:hover{
+    background: black;
+    border: whitesmoke;
+    color: whitesmoke;
+  }
+}
+
+.brands{
+  height: 125px;
+  width: 200px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background: round;
+}
+
+.container{
+  padding-top: 10px;
+}
   
   @media only screen and (max-width: 910px) {
     header.page-header-desktop {
@@ -227,6 +285,21 @@ body {
   @media (max-width: 500px) {
     .header-name {
       font-size: 0px;
+    }
+    .landing_image{
+      margin-top: 5px !important;
+    }
+  }
+
+  @media (max-width: 767px) {
+    .landing_image2{
+      height: 700px;
+    }
+  }
+
+  @media (max-width: 399px) {
+    .landing_image2{
+      height: 900px;
     }
   }
   
