--- a/public/css/app.css
+++ b/public/css/app.css
@@ -79,6 +79,7 @@ header.page-header-desktop {
   width: 40%;
   background-color: whitesmoke;
   border-radius: 20px;
+  margin: auto;
 }
 
 .search-line {
