make migrations, container and goods template

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -321,3 +321,10 @@ footer.page-footer {
   width: 40px;
 }
 
+.container-column {
+  background-color: whitesmoke;
+  color: #5b5b5b;
+  border-radius: 20px;
+  margin: 5px;
+}
+
