--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -316,3 +316,10 @@ body {
 #button-search {
     width: 40px;
 }
+
+.container-column {
+    background-color: whitesmoke;
+    color: #5b5b5b;
+    border-radius: 20px;
+    margin: 5px;
+}
