--- a/public/css/app.css
+++ b/public/css/app.css
@@ -267,6 +267,34 @@ footer.page-footer {
   padding-top: 10px;
 }
 
+.input-search {
+  width: 100%;
+  border-width: 0;
+  border-color: white;
+}
+
+.input-search:focus {
+  outline: none;
+}
+
+#button-search {
+  width: 40px;
+}
+
+.container-column {
+  color: white;
+  border-radius: 15px;
+  margin: 5px;
+  text-align: center;
+}
+
+#container-image {
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 @media only screen and (max-width: 910px) {
   header.page-header-desktop {
     clear: both;
@@ -283,6 +311,10 @@ footer.page-footer {
     box-sizing: content-box;
     height: 70px;
   }
+
+  #container-image {
+    position: center;
+  }
 }
 
 @media (max-width: 500px) {
@@ -293,11 +325,19 @@ footer.page-footer {
   .landing_image {
     margin-top: 5px !important;
   }
+
+  #container-image {
+    position: center;
+  }
 }
 
 @media (max-width: 767px) {
   .landing_image2 {
     height: 700px;
+  }
+
+  #container-image {
+    position: center;
   }
 }
 
@@ -305,26 +345,9 @@ footer.page-footer {
   .landing_image2 {
     height: 900px;
   }
-}
 
-.input-search {
-  width: 100%;
-  border-width: 0;
-  border-color: white;
-}
-
-.input-search:focus {
-  outline: none;
-}
-
-#button-search {
-  width: 40px;
-}
-
-.container-column {
-  background-color: whitesmoke;
-  color: #5b5b5b;
-  border-radius: 20px;
-  margin: 5px;
+  #container-image {
+    position: center;
+  }
 }
 
