--- a/public/css/app.css
+++ b/public/css/app.css
@@ -571,12 +571,82 @@ footer.page-footer {
   display: block;
 }
 
+.order_button {
+  margin: auto;
+  color: whitesmoke;
+  background: #DDD92A;
+  border-color: #DDD92A;
+  width: 200px;
+  height: 50px;
+  border: solid;
+  margin-bottom: 20px;
+}
+
+.order_button:hover {
+  background: #DDD92A;
+  border: whitesmoke;
+  color: whitesmoke;
+}
+
+.order_tab {
+  color: #DDD92A;
+  background-color: #5B5B5B;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  font-size: 18px;
+}
+
+.order_h3 {
+  font-size: 18px;
+}
+
+.login_content {
+  min-height: calc(100vh - 213px);
+}
+
+.login_tab {
+  color: #DDD92A;
+  background-color: #5B5B5B;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  font-size: 18px;
+  width: 400px;
+}
+
+.login_button {
+  margin: auto;
+  color: whitesmoke;
+  background: #DDD92A;
+  border-color: #DDD92A;
+  width: 200px;
+  height: 50px;
+  border: solid;
+  margin-bottom: 20px;
+}
+
+.login_button:hover {
+  background: #DDD92A;
+  border: whitesmoke;
+  color: whitesmoke;
+}
+
+.remember {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 @media only screen and (max-width: 910px) {
   header.page-header-desktop {
     clear: both;
     visibility: hidden;
     box-sizing: border-box;
     display: none;
+  }
+
+  .login_content {
+    min-height: calc(100vh - 163px);
   }
 
   header.page-header-mob {
@@ -614,6 +684,13 @@ footer.page-footer {
 
   #container-image {
     position: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .login_tab {
+    width: 80%;
+    font-size: 16px;
   }
 }
 
