--- a/public/css/app.css
+++ b/public/css/app.css
@@ -637,6 +637,10 @@ footer.page-footer {
   padding-bottom: 20px;
 }
 
+.input_text {
+  border-radius: 5px;
+}
+
 @media only screen and (max-width: 910px) {
   header.page-header-desktop {
     clear: both;
@@ -692,6 +696,10 @@ footer.page-footer {
     width: 80%;
     font-size: 16px;
   }
+
+  .login_tab label {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 399px) {
@@ -701,6 +709,69 @@ footer.page-footer {
 
   #container-image {
     position: center;
+  }
+}
+
+.cart-right {
+  background-color: #5b5b5b;
+  padding: 40px 50px;
+  height: 350px;
+}
+
+.cart-right button {
+  height: 45px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  background-color: #DDD92A;
+  font-weight: bold;
+  color: #EBF2FA;
+  border: none;
+  width: 70%;
+  font-size: 18px;
+}
+
+@media (max-width: 768px) {
+  .cart-right button {
+    width: 90%;
+  }
+}
+
+.cart-left {
+  background-color: #5b5b5b;
+  padding: 40px 50px;
+}
+
+.cart {
+  margin-top: 70px;
+}
+
+.cart h2 {
+  text-align: left;
+  font-size: 30px;
+  color: #DDD92A;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .cart {
+    padding-top: 0;
+    margin-top: 0;
+  }
+}
+
+.cart-change-box {
+  padding-left: 5px;
+}
+
+@media (max-width: 768px) {
+  .cart-change-box {
+    padding: 5px 0 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .cart-warn {
+    display: none;
   }
 }
 
