--- a/public/css/app.css
+++ b/public/css/app.css
@@ -571,12 +571,165 @@ footer.page-footer {
   display: block;
 }
 
+.order_button {
+  margin: auto;
+  color: whitesmoke;
+  background: #DDD92A;
+  border-color: #DDD92A;
+  width: 200px;
+  height: 50px;
+  border: solid;
+  margin-bottom: 20px;
+}
+
+.order_button:hover {
+  background: #DDD92A;
+  border: whitesmoke;
+  color: whitesmoke;
+}
+
+.order_tab {
+  color: #DDD92A;
+  background-color: #5B5B5B;
+  margin-bottom: 20px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  font-size: 18px;
+}
+
+.order-hr {
+  height: 2px;
+  background-color: #DDD92A;
+}
+
+@media (max-width: 768px) {
+  .order-form {
+    padding: 0;
+  }
+}
+
+.order-content {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.order_h3 {
+  font-size: 20px;
+  margin-top: 15px;
+}
+
+.login_content {
+  min-height: calc(100vh - 213px);
+}
+
+.login_tab {
+  color: #DDD92A;
+  background-color: #5B5B5B;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  font-size: 18px;
+  width: 400px;
+}
+
+.login_button {
+  margin: auto;
+  color: whitesmoke;
+  background: #DDD92A;
+  border-color: #DDD92A;
+  width: 200px;
+  height: 50px;
+  border: solid;
+  margin-bottom: 20px;
+}
+
+.login_button:hover {
+  background: #DDD92A;
+  border: whitesmoke;
+  color: whitesmoke;
+}
+
+.remember {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.input_text {
+  border-radius: 5px;
+}
+
+.btn {
+  margin: 5px;
+  background: #DDD92A !important;
+}
+
+.btn-circle {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  text-align: center;
+  padding-left: 0;
+  padding-right: 0;
+  font-size: 16px;
+}
+
+.btn-circle:hover {
+  background: #DDD92A;
+  border: whitesmoke;
+  color: whitesmoke;
+}
+
+.file_address {
+  width: 100%;
+  height: 60px;
+  background: #EEEFA9;
+}
+
+.product_img {
+  width: 300px;
+  height: 600px;
+}
+
+.info_content {
+  height: 400px;
+  padding-left: 20px;
+}
+
+.info_button {
+  margin: auto;
+  color: whitesmoke;
+  background: #DDD92A;
+  border-color: #DDD92A;
+  width: 200px;
+  height: 50px;
+  border: solid;
+  margin-bottom: 20px;
+}
+
+.info_button:hover {
+  background: #DDD92A;
+  border: whitesmoke;
+  color: whitesmoke;
+}
+
+.info {
+  min-height: calc(100vh - 273px);
+}
+
 @media only screen and (max-width: 910px) {
   header.page-header-desktop {
     clear: both;
     visibility: hidden;
     box-sizing: border-box;
     display: none;
+  }
+
+  .login_content {
+    min-height: calc(100vh - 163px);
+  }
+
+  .info {
+    min-height: calc(100vh - 223px);
   }
 
   header.page-header-mob {
@@ -590,6 +743,12 @@ footer.page-footer {
 
   #container-image {
     position: center;
+  }
+}
+
+@media (max-width: 540px) {
+  .info {
+    min-height: calc(100vh - 240px);
   }
 }
 
@@ -617,6 +776,17 @@ footer.page-footer {
   }
 }
 
+@media (max-width: 480px) {
+  .login_tab {
+    width: 80%;
+    font-size: 16px;
+  }
+
+  .login_tab label {
+    font-size: 16px;
+  }
+}
+
 @media (max-width: 399px) {
   .landing_image2 {
     height: 900px;
@@ -624,6 +794,69 @@ footer.page-footer {
 
   #container-image {
     position: center;
+  }
+}
+
+.cart-right {
+  background-color: #5b5b5b;
+  padding: 40px 50px;
+  height: 350px;
+}
+
+.cart-right button {
+  height: 45px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  background-color: #DDD92A;
+  font-weight: bold;
+  color: #EBF2FA;
+  border: none;
+  width: 70%;
+  font-size: 18px;
+}
+
+@media (max-width: 768px) {
+  .cart-right button {
+    width: 90%;
+  }
+}
+
+.cart-left {
+  background-color: #5b5b5b;
+  padding: 40px 50px;
+}
+
+.cart {
+  margin-top: 70px;
+}
+
+.cart h2 {
+  text-align: left;
+  font-size: 30px;
+  color: #DDD92A;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .cart {
+    padding-top: 0;
+    margin-top: 0;
+  }
+}
+
+.cart-change-box {
+  padding-left: 5px;
+}
+
+@media (max-width: 768px) {
+  .cart-change-box {
+    padding: 5px 0 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .cart-warn {
+    display: none;
   }
 }
 
