--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -763,3 +763,91 @@ padding-top: 10px;
         display: none;
     }
 }
+
+.cart-item-price{
+    font-weight: bold;
+    font-size: 18px;
+    @media (max-width: 540px) {
+        font-size: 13px;
+    }
+    @media (max-width: 992px) {
+        font-size: 15px;
+    }
+}
+
+.cart-item-name{
+    color: #EBF2FA;
+    font-size: 20px;
+    @media (max-width: 540px) {
+        font-size: 13px;
+    }
+    @media (max-width: 992px) {
+        font-size: 14px;
+    }
+}
+
+#cart-cancel{
+    width: 20px;
+    @media (max-width: 540px) {
+        width: 18px;
+    }
+}
+
+.item-amount{
+
+    margin-bottom: 30px;
+    span{
+        cursor:pointer;
+        color: #DDD92A;
+        font-size: 30px;
+        font-weight: bold;
+    }
+}
+
+.product_info{
+    font-size: 16px;
+    text-align: left;
+}
+
+.product{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.order-hr{
+    border: none;
+    color: #DDD92A;
+    background-color: #DDD92A;
+    height: 2px;
+}
+
+.order_tab{
+    color: #DDD92A;
+    background-color: #5B5B5B;
+    margin-bottom: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 18px;
+}
+
+.order-hr{
+    height: 2px;
+    background-color: #DDD92A;
+}
+
+.order-form{
+    @media (max-width: 768px) {
+        padding: 0;
+    }
+}
+
+.order-content{
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.order_h3{
+    font-size: 20px;
+    margin-top: 15px;
+
+}
